--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "description": "Este é uma cópia do projeto https://tabnews.com.br feita na aula do https://curso.dev",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
+  "author": "",
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
+    "lint:check": "prettier --check .",
+    "lint:fix": "prettier --write .",
     "build": "next build",
     "start": "next start"
   },
@@ -14,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
-  "author": "",
-  "license": "MIT"
+  "devDependencies": {
+    "prettier": "^3.0.3"
+  }
 }
