--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "next": "^13.1.6",
@@ -18,6 +20,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "jest": "^29.6.2",
     "prettier": "^3.0.3"
   }
 }
