make database.js more powerful around errors

--- a/infra/compose.yaml
+++ b/infra/compose.yaml
@@ -1,6 +1,6 @@
 services:
   database:
-    image: "postgres:alpine3.18"
+    image: "postgres:16.1-alpine3.18"
     env_file:
       - ../.env.development
     ports:
